--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
-title: Your Name
-position: Ph.D. Student
+title: Shijing Wang
+position: Ph.D. Student  in Computer Science Beijing Jiaotong University.
 affiliation: Your Affiliation
 email: yourname (at) example.edu
 
