--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
-title: Shijing Wang
-position: Ph.D. Student  in Computer Science Beijing Jiaotong University.
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Shijing Wang (王诗菁)
+position: Ph.D. Student in Computer Science
+affiliation: Beijing Jiaotong University
+email: shijingwang@bjtu.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
