--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Shijing Wang (王诗菁)
+title: Shijing Wang
 position: Ph.D. Student in Computer Science
 affiliation: Beijing Jiaotong University
 email: shijingwang@bjtu.edu.cn
