--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Shijing Wang
 position: Ph.D. Student in Computer Science
-affiliation: Beijing Jiaotong University
+affiliation: Beijing Jiaotong University, China
 email: shijingwang@bjtu.edu.cn
 
 # Search Engine Optimization (SEO)
