--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Shijing Wang
 position: Ph.D. Student in Computer Science
 affiliation: Beijing Jiaotong University, China
+affiliation_link: https://en.bjtu.edu.cn/AboutBJTU_20161201183113092917/gljg_20161201183113092917/index.htm
 email: shijingwang@bjtu.edu.cn
 
 # Search Engine Optimization (SEO)
