--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -15,4 +15,4 @@ main:
     conference_short: Under review
     pdf: https://arxiv.org/pdf/2409.04766
     bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:Br9D7FUpMB8J:scholar.google.com/&output=citation&scisdr=ClHYqyjrEMy2m-fJ7jY:AFWwaeYAAAAAZ1_P9jZjBa3vSM5ZIwUuD_y9JGc&scisig=AFWwaeYAAAAAZ1_P9uVAd7b2CqcYHSbJG5F0xVI&scisf=4&ct=citation&cd=-1&hl=zh-CN
-    image: ./assets/img/EIF2025.png
+    image: ./assets/img/EIF_2025.png
