--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,3 +17,12 @@ main:
     pdf: https://arxiv.org/pdf/2409.04766
     bibtex: ./assets/files/EIF.md
     image: ./assets/img/EIF_2025.png
+    
+  - title: Vmf loss: Exploring a scattered intra-class hypersphere for few-shot learning
+    authors: Xin Liu, <strong>Shijing Wang</strong>, Kairui Zhou, Yilin Lyu, Mingyang Song, Liping Jing, Tieyong Zeng, Jian Yu
+    conference_short: ECML-PKDD 2023
+    conference: Joint European Conference on Machine Learning and Knowledge Discovery in Databases <strong>(ECML-PKDD)</strong>, 2023.
+    pdf: https://doi.org/10.1007/978-3-031-43415-0_27
+    code: https://github.com/ShijingWang9962/vMF-Loss-Exploring-a-Scatter-Intra-class-Hypersphere-for-Few-shot-Learning
+    bibtex: ./assets/files/SUGE_AAAI2024.md
+    image: ./assets/img/SUGE_AAAI2024.png
