--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -8,14 +8,16 @@ main:
     code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
     poster: ./assets/img/shijing_4273_poster_01.png
     bibtex: ./assets/files/SUGE_AAAI2024.md
+    note: CCF-A
     image: ./assets/img/SUGE_AAAI2024.png
 
-  - title: "Cross-Dataset Gaze Estimation by Evidential Inter-intra Fusion"
+  - title: Cross-Dataset Gaze Estimation by Evidential Inter-intra Fusion
     authors: <strong>Shijing Wang</strong>,  Yaping Huang*, Jun Xie, Yi Tian, Feng Chen, Zhepeng Wang
     conference_short: Under review
     conference: arXiv preprint arXiv:2409.04766
     pdf: https://arxiv.org/pdf/2409.04766
     bibtex: ./assets/files/EIF.md
+    note: Under review
     image: ./assets/img/EIF_2025.png
     
   - title: Vmf loss: Exploring a scattered intra-class hypersphere for few-shot learning
@@ -25,4 +27,16 @@ main:
     pdf: https://doi.org/10.1007/978-3-031-43415-0_27
     code: https://github.com/ShijingWang9962/vMF-Loss-Exploring-a-Scatter-Intra-class-Hypersphere-for-Few-shot-Learning
     bibtex: ./assets/files/PKDD_2023.md
+    note: CCF-B
     image: ./assets/img/SUGE_AAAI2024.png
+
+    - title: 序列标签推荐 (Sequencial Tag Recommendation)
+    authors: Bing Liu, Pengyu Xu, <strong>Shijing Wang</strong>, Sijin Lu, Hongjian Sun, Liping Jing
+    conference_short: 计算机科学
+    conference: 计算机科学 (Computer Science).
+    pdf: https://arxiv.org/pdf/2310.05423
+    bibtex: ./assets/files/ComputerScience_2024.md
+    note: Chinese CCF-B Accepted but not yet published
+    image: ./assets/img/ComputerScience_2024.png
+
+    
