--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=EZuRqCIAAAAJ
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/ShijingWang9962
+# google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=EZuRqCIAAAAJ
+# cv_link: assets/files/curriculum_vitae.pdf
+# github_link: https://github.com/ShijingWang9962
 # linkedin: https://www.linkedin.com/
 # twitter: https://twitter.com/
 
