--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,7 +4,7 @@ main:
     conference_short: AAAI 2024
     conference: Association for the Advancement of Artificial Intelligence <strong>(AAAI)</strong>, 2024.
     pdf: https://ojs.aaai.org/index.php/AAAI/article/download/28368/28720
-    code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
+    # code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
     poster: ./assets/img/shijing_4273_poster_01.png
     bibtex: ./assets/files/SUGE_AAAI2024.md
     notes: CCF-A
