--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -31,7 +31,7 @@ co_author:
     image: ./assets/img/PKDD_2023.png
 
   - title: 序列标签推荐 (Sequencial Tag Recommendation)
-    authors: Bing Liu, Pengyu Xu, <strong>Shijing Wang</strong>, Sijin Lu, Hongjian Sun, Liping Jing*
+    authors: Bing Liu, Pengyu Xu, Sijin Lu, <strong>Shijing Wang</strong>, Hongjian Sun, Liping Jing*
     conference_short: 计算机科学
     conference: 计算机科学 (Computer Science).
     pdf: https://arxiv.org/pdf/2310.05423
